[gd_scene load_steps=2 format=2]

[ext_resource path="res://Objects/SelectableArea2D/SelectableArea2D.gd" type="Script" id=1]

[node name="SelectableArea2D" type="Area2D"]
script = ExtResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
